--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     
     <body>
         <h1 style="text-align:center"> Boting Li </h1>
-        <p style="font-size:150%"><i> Sample Personal Webpage </i></p>
+        <p style="font-size:150%"><i> Cornell id: bl657 </i></p>
+        <p > Short biography: </p>
         
         <ul>
-            <li class = "sold"> Founder of Impressionism</li>
+            <li class = "sold"> A Computer science student in Cornell Tech</li>
             <li id = "bad"> Lived in France</li>
             <li class = "sold"> 1840-1926, aged 86</li>
         </ul>
