--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <body>
         <h1 style="text-align:center"> Boting Li </h1>
         <p style="font-size:150%"><i> Cornell id: bl657 </i></p>
+         <a class= "idphoto" href="https://botingli.github.io">
+            <img src="small.jpg" alt="HTML tutorial" align="middle" style="width:250px;height:240px;border:5;" >
+            </img>
+        </a>
         <p > Short biography: </p>
         
         <ul>
             <li class = "sold"> A Computer science student in Cornell Tech</li>
-            <li id = "bad"> Lived in France</li>
-            <li class = "sold"> 1840-1926, aged 86</li>
+            <li id = "bad"> From Chengdu China </li>
+            <li class = "sold"> Learning the startup-systems</li>
         </ul>
         
         <h3> Some Links About me and this Class </h3>
@@ -42,4 +46,15 @@
         <p style="font-size:120%"> Click on the First painting to see Monet's Gallery. Click on the Second or Third painting to see the picture in its original proportion</p>
 
     </body>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-84230003-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </html>
